Kelsey Development Sandbox/src/objects/DS_SDQ_PSI_CDI_F__c.object
<CustomObject>
    <fields>
        <fullName>FSDSUPSET__c</fullName>
        <description>34. Self: Do the difficulties upset or distress you?</description>
        <label>FSDSUPSET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSDSWORR__c</fullName>
        <description>10. Self: I worry a lot</description>
        <label>FSDSWORR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_PSI__c</fullName>
        <label>STATUS PSI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_SDQ_P_04_10__c</fullName>
        <label>STATUS SDQ P 04 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_SDQ_P_11_17__c</fullName>
        <label>STATUS SDQ P 11 17</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_SDQ_S_11_17__c</fullName>
        <label>STATUS SDQ S 11 17</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS SDQ PSI CDI F</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Client__c</columns>
        <columns>FDOV__c</columns>
        <columns>FDOASDOP__c</columns>
        <columns>FDOASDOS__c</columns>
        <columns>FDOASDYP__c</columns>
        <columns>STATUS_SDQ_P_04_10__c</columns>
        <columns>STATUS_SDQ_P_11_17__c</columns>
        <columns>STATUS_SDQ_S_11_17__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DS SDQ PSI CDI F Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS SDQ PSI CDI F</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PSI_DC_P_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIDC_PTLE__c &lt;&gt; FPSIDC_PTLE2__c</errorConditionFormula>
        <errorDisplayField>FPSIDC_PTLE2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Difficult Child Percentile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DC_P_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIDC_PTLE__c&gt;=0)&amp;&amp;
(FPSIDC_PTLE__c &lt;= 99)
)
&amp;&amp;
NOT(
ISNULL(FPSIDC_PTLE__c)
)</errorConditionFormula>
        <errorDisplayField>FPSIDC_PTLE__c</errorDisplayField>
        <errorMessage>The Percentile entered for Difficult Child is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DC_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIDC__c &lt;&gt; FPSIDC2__c</errorConditionFormula>
        <errorDisplayField>FPSIDC2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Difficult Child Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DC_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIDC__c&gt;=12)&amp;&amp;
(FPSIDC__c &lt;= 60)
)
&amp;&amp;
NOT(
ISNULL(FPSIDC__c)
)
&amp;&amp;
NOT(
FPSIDC__c = 999)</errorConditionFormula>
        <errorDisplayField>FPSIDC__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Difficult Child is out of range. Please enter a valid score. If this score is unavailable, enter 999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DR_P_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIDR_PTLE__c &lt;&gt; FPSIDR_PTLE2__c</errorConditionFormula>
        <errorDisplayField>FPSIDR_PTLE2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Defensive Responding Percentile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DR_P_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIDR_PTLE__c&gt;=0)&amp;&amp;
(FPSIDR_PTLE__c &lt;= 99)
)
&amp;&amp;NOT(
ISNULL(FPSIDR_PTLE__c)
)</errorConditionFormula>
        <errorDisplayField>FPSIDR_PTLE__c</errorDisplayField>
        <errorMessage>The Percentile entered for Defensive Responding is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DR_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIDR__c &lt;&gt; FPSIDR2__c</errorConditionFormula>
        <errorDisplayField>FPSIDR2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Defensive Responding Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_DR_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIDR__c&gt;=7)&amp;&amp;
(FPSIDR__c &lt;= 35)
)
&amp;&amp;
NOT(
ISNULL(FPSIDR__c)
)
&amp;&amp;
NOT(
FPSIDR__c = 999)</errorConditionFormula>
        <errorDisplayField>FPSIDR__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Defensive Responding is out of range. Please enter a valid score. If this score is unavailable, enter 999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PCDI_P_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIPCDI_PTLE__c &lt;&gt; FPSIPCDI_PTLE2__c</errorConditionFormula>
        <errorDisplayField>FPSIPCDI_PTLE2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Parent-Child Dysfunctional Interaction Percentile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PCDI_P_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIPCDI_PTLE__c&gt;=0)&amp;&amp;
(FPSIPCDI_PTLE__c &lt;= 99)
)
&amp;&amp;
NOT(
ISNULL(FPSIPCDI_PTLE__c)
)</errorConditionFormula>
        <errorDisplayField>FPSIPCDI_PTLE__c</errorDisplayField>
        <errorMessage>The Percentile entered for Parent-Child Dysfunctional Interaction  is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PCDI_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIPCDI__c &lt;&gt; FPSIPCDI2__c</errorConditionFormula>
        <errorDisplayField>FPSIPCDI2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Parent-Child Dysfunctional Interaction Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PCDI_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIPCDI__c&gt;=12)&amp;&amp;
(FPSIPCDI__c &lt;= 60)
)
&amp;&amp;
NOT(
ISNULL(FPSIPCDI__c)
)
&amp;&amp;
NOT(
FPSIPCDI__c = 999)</errorConditionFormula>
        <errorDisplayField>FPSIPCDI__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Parent-Child Dysfunctional Interaction  is out of range. Please enter a valid score. If this score is unavailable, enter 999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PD_P_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIPD_PTLE__c &lt;&gt; FPSIPD_PTLE2__c</errorConditionFormula>
        <errorDisplayField>FPSIPD_PTLE2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Parental Distress Percentile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PD_P_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIPD_PTLE__c&gt;=0)&amp;&amp;
(FPSIPD_PTLE__c &lt;= 99)
)
&amp;&amp;
NOT(
ISNULL(FPSIPD_PTLE__c)
)</errorConditionFormula>
        <errorDisplayField>FPSIPD_PTLE__c</errorDisplayField>
        <errorMessage>The Percentile entered for Parental Distress is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PD_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSIPD__c &lt;&gt; FPSIPD2__c</errorConditionFormula>
        <errorDisplayField>FPSIPD2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Parental Distress Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_PD_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSIPD__c&gt;=12)&amp;&amp;
(FPSIPD__c &lt;= 60)
)
&amp;&amp;
NOT(
ISNULL(FPSIPD__c)
)
&amp;&amp;
NOT(
FPSIPD__c = 999)</errorConditionFormula>
        <errorDisplayField>FPSIPD__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Parental Distress is out of range. Please enter a valid score. If this score is unavailable, enter 999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_TS_P_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSITS_PTLE__c &lt;&gt; FPSITS_PTLE2__c</errorConditionFormula>
        <errorDisplayField>FPSITS_PTLE2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Total Stress Percentile</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_TS_P_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSITS_PTLE__c&gt;=0)&amp;&amp;
(FPSITS_PTLE__c &lt;= 99)
)
&amp;&amp;
NOT(
ISNULL(FPSITS_PTLE__c)
)</errorConditionFormula>
        <errorDisplayField>FPSITS_PTLE__c</errorDisplayField>
        <errorMessage>The Percentile entered for Total Stress is out of range. Please enter a valid score.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_TS_Raw_double_entry_mismatch</fullName>
        <active>true</active>
        <errorConditionFormula>FPSITS__c &lt;&gt; FPSITS2__c</errorConditionFormula>
        <errorDisplayField>FPSITS2__c</errorDisplayField>
        <errorMessage>Double entry does not match for this score: Total Stress Raw</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSI_TS_Raw_out_of_range</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
(FPSITS__c&gt;=36)&amp;&amp;
(FPSITS__c &lt;= 180)
)
&amp;&amp;
NOT(
ISNULL(FPSITS__c)
)
&amp;&amp;
NOT(
FPSITS__c = 999)</errorConditionFormula>
        <errorDisplayField>FPSITS__c</errorDisplayField>
        <errorMessage>The Raw Score entered for Total Stress is out of range. Please enter a valid score. If this score is unavailable, enter 999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_OP_date_cannot_be_before_FDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt; FDOASDOP__c</errorConditionFormula>
        <errorDisplayField>FDOASDOP__c</errorDisplayField>
        <errorMessage>Follow-up SDQ date of administration cannot be before Follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_OP_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>Client__r.DOB1__c &gt; FDOASDOP__c</errorConditionFormula>
        <errorDisplayField>FDOASDOP__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_OP_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>FDOASDOP__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>FDOASDOP__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_OS_date_cannot_be_before_FDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt; FDOASDOS__c</errorConditionFormula>
        <errorDisplayField>FDOASDOS__c</errorDisplayField>
        <errorMessage>Follow-up SDQ date of administration cannot be before Follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_OS_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>Client__r.DOB1__c &gt; FDOASDOS__c</errorConditionFormula>
        <errorDisplayField>FDOASDOS__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_OS_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>FDOASDOS__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>FDOASDOS__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_YP_date_cannot_be_before_FDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt; FDOASDYP__c</errorConditionFormula>
        <errorDisplayField>FDOASDYP__c</errorDisplayField>
        <errorMessage>Follow-up SDQ date of administration cannot be before Follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_YP_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>Client__r.DOB1__c &gt; FDOASDYP__c</errorConditionFormula>
        <errorDisplayField>FDOASDYP__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_YP_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>FDOASDYP__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>FDOASDYP__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_date_required</fullName>
        <active>false</active>
        <description>Date of administration is required</description>
        <errorConditionFormula>ISBLANK( FDOASDYP__c )&amp;&amp;ISBLANK( FDOASDOS__c )&amp;&amp;ISBLANK( FDOASDOP__c )</errorConditionFormula>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_must_indicate_method</fullName>
        <active>false</active>
        <description>Method of administration is required</description>
        <errorConditionFormula>ISPICKVAL( FMETSDOP__c , &apos;&apos;)&amp;&amp;ISPICKVAL( FMETSDOS__c , &apos;&apos;)&amp;&amp;ISPICKVAL( FMETSDYP__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>Please indicate the method of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDQ_must_specify_informant</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(FSDPINFOR__c ,&apos;2&apos;) &amp;&amp; ISBLANK (FSDPINFSP__c )</errorConditionFormula>
        <errorDisplayField>FSDPINFSP__c</errorDisplayField>
        <errorMessage>Please specify the informant</errorMessage>
    </validationRules>
</CustomObject>